# ppbot

./: .gitignore  CHANGELOG.md  README.md  flake.nix  ppbot.cabal
app/: Main.hs
