cabal-version:      2.4
name:               ppbot
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ppbot
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base ^>=4.14.1.0
        , calamity
        , data-default
        , data-flags
        , di
        , di-polysemy
        , generic-lens
        , hashable
        , lens
        , polysemy
        , polysemy-plugin
        , random
        , text
        , text-show
        , time
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        BlockArguments
        DataKinds
        OverloadedLabels
        OverloadedStrings
        TypeApplications
    ghc-options:
        -Wall
        -threaded
        -fplugin=Polysemy.Plugin
